Add terms and conditions on sale/quotation report

--- a/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
+++ b/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
@@ -204,6 +204,8 @@
                         </div>
                     </div>
                 </t>
+                <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})" />
+                <t t-call="sf_terms_and_conditions.sale_terms_and_conditions" />
             </div>
         </t>
     </template>
