Add terms and conditions

--- a/odoo/local-src/sf_purchase/report/sf_purchase_order_templates.xml
+++ b/odoo/local-src/sf_purchase/report/sf_purchase_order_templates.xml
@@ -148,6 +148,7 @@
                 </div>
 
                 <p t-field="o.notes"/>
+                <t t-call="sf_terms_and_conditions.purchase_terms_and_conditions" />
             </div>
         </t>
     </template>
