--- a/odoo/local-src/sf_sale/views/sale_views.xml
+++ b/odoo/local-src/sf_sale/views/sale_views.xml
@@ -12,4 +12,15 @@
             </filter>
         </field>
     </record>
+
+    <record id="view_sf_sale_order_form" model="ir.ui.view">
+        <field name="name">sf.order.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="delivery.view_order_form_with_carrier"/>
+        <field name="arch" type="xml">
+            <field name="carrier_id" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </field>
+        </field>
+    </record>
 </odoo>
