--- a/odoo/local-src/sf_sale_invoicing/views/payment_term.xml
+++ b/odoo/local-src/sf_sale_invoicing/views/payment_term.xml
@@ -5,7 +5,7 @@
         <field name="model">account.payment.term</field>
         <field name="inherit_id" ref="account.view_payment_term_form"/>
         <field name="arch" type="xml">
-            <field name="line_ids" position="before">
+            <field name="active" position="after">
                 <field name="down_payment_required" />
             </field>
         </field>
