--- a/odoo/local-src/sf_sale_invoicing/views/sale.xml
+++ b/odoo/local-src/sf_sale_invoicing/views/sale.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <record id="view_order_form" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//header" position="inside">
+                <button name="action_create_procurements" attrs="{'invisible': ['|', ('down_payment_required', '=', False), '|', ('state', '!=', 'sale'), ('down_payment_missing', '=', True )]}" type="object" string="Create procurements" />
+            </xpath>
+            <field name="payment_term_id" position="after">
+                <field name="down_payment_required" invisible="1" />
+                <field name="down_payment_missing" invisible="1" />
+            </field>
+        </field>
+    </record>
+
     <record id="action_orders_missing_down_payment" model="ir.actions.act_window">
         <field name="name">Sales missing down payment</field>
         <field name="type">ir.actions.act_window</field>
