Use 3 distinct services to import RMA MRP repair lines

--- a/odoo/local-src/sf_rma_sale_order/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma_sale_order/views/rma_config_settings.xml
@@ -7,7 +7,9 @@
         <field name="arch" type="xml">
             <div id="main" position="inside">
                 <group string="Sale order">
-                    <field name="rma_service_product_id" />
+                    <field name="rma_service_service_product_id" />
+                    <field name="rma_service_consumable_product_id" />
+                    <field name="rma_service_stockable_product_id" />
                 </group>
             </div>
         </field>
