Allow to add additional description on sale order lines imported from RMA MRP repair line

--- a/odoo/local-src/sf_rma_sale_order/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma_sale_order/views/rma_config_settings.xml
@@ -10,6 +10,7 @@
                     <field name="rma_service_service_product_id" />
                     <field name="rma_service_consumable_product_id" />
                     <field name="rma_service_stockable_product_id" />
+                    <field name="rma_service_additional_description" />
                 </group>
             </div>
         </field>
