Move sf_view_order_form_inherit_sale_stock

--- a/odoo/local-src/sf_sale/views/sale_views.xml
+++ b/odoo/local-src/sf_sale/views/sale_views.xml
@@ -13,6 +13,17 @@
         </field>
     </record>
 
+    <record id="sf_view_order_form_inherit_sale_stock" model="ir.ui.view">
+        <field name="name">sale.order.form.sale.stock.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_stock.view_order_form_inherit_sale_stock" />
+        <field name="arch" type="xml">
+            <field name="incoterm" position="attributes">
+                <attribute name="attrs">{'readonly': [('state','in',('sale','done'))]}</attribute>
+            </field>
+        </field>
+    </record>
+
     <record id="view_sf_sale_order_form" model="ir.ui.view">
         <field name="name">sf.order.form</field>
         <field name="model">sale.order</field>
