Propagate delivery info from Freight Labeling to Delivery Orders

--- a/odoo/local-src/sf_stock/views/stock_picking_type.xml
+++ b/odoo/local-src/sf_stock/views/stock_picking_type.xml
@@ -8,6 +8,7 @@
             <field name="arch" type="xml">
                 <field name="use_existing_lots" position="after">
                     <field name="show_button_shipped"/>
+                    <field name="propagate_delivery_info"/>
                 </field>
             </field>
     </record>
