--- a/odoo/local-src/mrp_team/views/mrp_team_view.xml
+++ b/odoo/local-src/mrp_team/views/mrp_team_view.xml
@@ -68,7 +68,7 @@
                     </group>
                     <notebook>
                         <page name="members" string="Team Members">
-                            <field name="member_ids" widget="many2many_kanban" options="{'not_delete': True}" domain="[('share', '=', False), ('mrp_team_id', '=', False)]">
+                            <field name="member_ids" widget="many2many_kanban" options="{'not_delete': True}" domain="[('share', '=', False), ('mrp_team_ids', '=', False)]">
                                 <kanban quick_create="false" create="true" delete="true">
                                     <field name="name"/>
                                     <templates>
