--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -57,7 +57,7 @@
                     <div class="row mt32 mb32" id="informations">
                         <div class="col-xs-9">
                             <div t-if="o.procurement_group_sale_id" class="col-xs-3">
-                                <strong>Quote Refeference</strong>
+                                <strong>Quote Reference</strong>
                                 <p t-field="o.procurement_group_sale_id.name"/>
                             </div>
                             <div t-if="o.procurement_group_sale_id.client_order_ref" class="col-xs-3">
