--- a/odoo/local-src/sf_purchase/views/purchase.xml
+++ b/odoo/local-src/sf_purchase/views/purchase.xml
@@ -17,7 +17,8 @@
             </field>
             <field name="analytic_tag_ids" position="replace"/>
             <field name="account_analytic_id" position="before">
-                <field name="analytic_tag_ids" string="Team" groups="purchase.group_analytic_accounting" widget="many2many_tags"/>
+                <field name="analytic_tag_ids"
+                       string="Team" groups="purchase.group_analytic_accounting" widget="many2many_tags" attrs="{'required': True}"/>
             </field>
             <field name="account_analytic_id" position="attributes">
                 <attribute name="string">Project</attribute>
