--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -197,12 +197,18 @@
                                     </table>
                                 </td>
                                 <!-- Delivered Quantity -->
-                                <td class="text-right" t-if="pack_operation.state == 'done'">
-                                    <t t-if="pack_operation.ordered_qty != pack_operation.qty_done">
-                                        <t t-set="backorder" t-value="True"/>
-                                    </t>
-                                    <span t-field="pack_operation.qty_done"/>
-                                    <span t-field="pack_operation.product_uom_id"/>
+                                <td t-if="pack_operation.state == 'done'">
+                                    <table class="table table-condensed">
+                                        <tr>
+                                            <td class="text-right">
+                                                <t t-if="pack_operation.ordered_qty != pack_operation.qty_done">
+                                                    <t t-set="backorder" t-value="True"/>
+                                                </t>
+                                                <span t-field="pack_operation.qty_done"/>
+                                                <span t-field="pack_operation.product_uom_id"/>
+                                            </td>
+                                        </tr>
+                                    </table>
                                 </td>
                                 <!-- Price Unit -->
                                 <td>
