--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -67,7 +67,7 @@
               <button name="action_open" type="object" string="Open" class="oe_highlight" states="draft"/>
               <button name="action_close" type="object" string="Close" states="draft"/>
               <button name="action_close" type="object" string="Close" class="oe_highlight" states="open"/>
-              <button name="action_reset" type="object" string="Reset" states="open,closed,canceled"/>
+              <button name="action_reset" type="object" string="Reset" states="canceled" groups="sf_rma.group_reset_rma"/>
               <button name="action_cancel" type="object" string="Cancel" states="draft,open"/>
               <field name="state" widget="statusbar"/>
             </header>
