--- a/odoo/local-src/sf_rma_mrp_repair/views/mrp_repair.xml
+++ b/odoo/local-src/sf_rma_mrp_repair/views/mrp_repair.xml
@@ -51,17 +51,17 @@
             <!-- Replaces header with custom buttons -->
             <xpath expr="//header" position="replace">
                 <header>
-                    <button name="action_repair_to_analyze" attrs="{'invisible':['|', ('state', '!=', 'draft'), ('invoicable_rma', '=', False)]}" string="To analyze" type="object" class="oe_highlight"/>
+                    <button name="action_repair_to_analyze" attrs="{'invisible':['|', ('state', '!=', 'open'), ('invoicable_rma', '=', False)]}" string="To analyze" type="object" class="oe_highlight"/>
                     <button name="action_repair_to_quotation" states="to_analyze" string="To quotation" type="object" class="oe_highlight"/>
-                    <button name="action_repair_to_repair" attrs="{'invisible': ['!', '|', '&amp;', ('state', '=', 'draft'), ('invoicable_rma', '=', False), '&amp;', ('state', '=', 'to_quotation'), ('invoicable_rma', '=', True)]}" string="To repair" type="object" class="oe_highlight"/>
+                    <button name="action_repair_to_repair" attrs="{'invisible': ['!', '|', '&amp;', ('state', '=', 'open'), ('invoicable_rma', '=', False), '&amp;', ('state', '=', 'to_quotation'), ('invoicable_rma', '=', True)]}" string="To repair" type="object" class="oe_highlight"/>
                     <button name="action_repair_to_test" states="under_repair" string="To test" type="object" class="oe_highlight"/>
                     <button name="action_repair_back_to_analyze" attrs="{'invisible':['|', ('state', '!=', 'under_repair'), ('invoicable_rma', '=', False)]}" string="Back to analyze" type="object" />
                     <button name="action_repair_to_finalize" states="to_test" string="To finalize" type="object" class="oe_highlight"/>
                     <button name="action_repair_end" states="to_finalize" type="object" string="End Repair" class="oe_highlight"/>
                     <button name="action_repair_back_to_repair" states="to_test,to_finalize" string="Back to repair" type="object" />
-                    <button name="action_repair_cancel" states="draft,to_analyze,to_quotation,under_repair,to_test,to_finalize" type="object" string="Cancel Repair"/>
+                    <button name="action_repair_cancel" states="draft,open,to_analyze,to_quotation,under_repair,to_test,to_finalize" type="object" string="Cancel Repair"/>
                     <button name="action_repair_cancel_draft" states="cancel" string="Set to Draft" type="object"/>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,under_repair,to_test,to_finalize,done"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,open,under_repair,to_test,to_finalize,done"/>
                     <field name="invoicable_rma" invisible="1" />
                 </header>
             </xpath>
