--- a/odoo/local-src/sf_rma/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma/views/rma_config_settings.xml
@@ -11,7 +11,11 @@
                     <button string="Cancel" type="object" name="cancel" class="oe_link"/>
                 </header>
                 <field name="company_id" invisible="1" />
-                <div id="main"/>
+                <div id="main">
+                    <group name="sale" string="Sale order">
+                        <field name="rma_sale_line_route_id"/>
+                    </group>
+                </div>
             </form>
         </field>
     </record>
