--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -92,7 +92,7 @@
                         <div class="col-xs-3" id="contact">
                             <div name="contact" t-if="o.partner_id and (o.partner_id.phone or o.partner_id.mobile or o.partner_id.email)">
                                 <strong>Contact</strong>
-                                <p style="line-height:1px;padding-top:8px;">
+                                <p style="padding-top:8px;">
                                     <span t-field="o.partner_id.name"/>
                                     <span t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["phone", "mobile", "email"], "no_marker": False, "phone_icons": True}'/>
                                 </p>
@@ -190,7 +190,7 @@
                                 <td>
                                     <table class="table table-condensed" t-if="pack_operation.linked_move_operation_ids">
                                         <tr t-foreach="pack_operation.linked_move_operation_ids.mapped('move_id')" t-as="move_line">
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <span t-field="move_line.ordered_qty"/>
                                             </td>
                                         </tr>
@@ -200,7 +200,7 @@
                                 <td t-if="pack_operation.state == 'done'">
                                     <table class="table table-condensed">
                                         <tr>
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <t t-if="pack_operation.ordered_qty != pack_operation.qty_done">
                                                     <t t-set="backorder" t-value="True"/>
                                                 </t>
@@ -214,7 +214,7 @@
                                 <td>
                                     <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
                                         <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <span t-field="sale_line.price_unit"/>
                                             </td>
                                         </tr>
@@ -224,7 +224,7 @@
                                 <td t-if="display_discount">
                                     <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
                                         <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <span t-field="sale_line.discount"/>
                                             </td>
                                         </tr>
@@ -234,7 +234,7 @@
                                 <td class="text-right">
                                     <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
                                         <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <span t-esc="', '.join(map(lambda x: (x.description or x.name), sale_line.tax_id))"/>
                                             </td>
                                         </tr>
@@ -244,7 +244,7 @@
                                 <td>
                                     <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
                                         <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
-                                            <td class="text-right">
+                                            <td class="text-right" style="border-top: none;">
                                                 <span t-field="sale_line.price_subtotal"/>
                                             </td>
                                         </tr>
@@ -290,6 +290,14 @@
                             All items couldn't be shipped, the remaining ones will be shipped as soon as they become available.
                         </t>
                     </p>
+
+                    <div class="row" id="fta" name="fta">
+                        <div class="col-xs-12" name="fta_col">
+                            <div name="fta_desc" t-if="o.partner_id and o.free_trade_show">
+                                <span t-field="o.partner_id.country_id.agreement_desc"/>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </t>
