--- a/odoo/local-src/sf_stock/views/stock_picking_type.xml
+++ b/odoo/local-src/sf_stock/views/stock_picking_type.xml
@@ -9,6 +9,7 @@
                 <field name="use_existing_lots" position="after">
                     <field name="show_button_shipped"/>
                     <field name="propagate_delivery_info"/>
+                    <field name="show_availability_wizard"/>
                 </field>
             </field>
     </record>
