Free RMA, default delivery method

--- a/odoo/local-src/sf_rma/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma/views/rma_config_settings.xml
@@ -14,6 +14,7 @@
                 <div id="main">
                     <group name="sale" string="Sale order">
                         <field name="rma_sale_line_route_id"/>
+                        <field name="rma_so_default_carrier_id" />
                     </group>
                 </div>
             </form>
