--- a/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
+++ b/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
@@ -197,6 +197,9 @@
                         </div>
                     </div>
                 </t>
+
+                <span t-field="doc.note"/>
+
                 <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})" />
                 <t t-call="sf_terms_and_conditions.sale_terms_and_conditions" />
             </div>
