--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -134,7 +134,7 @@
               </div>
               <div class="oe_title">
                 <h1>
-                  <field name="name" class="oe_inline" attrs="{'readonly': [('state', '=', 'closed')]}"/>
+                  <field name="name" class="oe_inline" attrs="{'readonly': 1}"/>
                 </h1>
               </div>
               <group>
