--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -9,7 +9,7 @@
     <template id="sf_report_deliverynote_header_right" inherit_id="sf_report.sf_external_layout_header" primary="True">
         <xpath expr="//div[@name='header_title']" position="inside">
             <p>
-                <span><strong>DN / Invoice</strong></span>
+                <span><strong>Delivery note invoice:</strong></span>
                 <span t-field="o.name"/>
             </p>
             <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d %B %Y')"/>
@@ -99,37 +99,16 @@
                         </div>
                     </div>
 
-                    <table class="table table-condensed mt48" t-if="not o.pack_operation_ids">
-                        <thead>
-                            <tr style="background: #ccc;">
-                                <th><strong>Product</strong></th>
-                                <th><strong>Origin</strong></th>
-                                <th><strong>Ordered Quantity</strong></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr t-foreach="o.move_lines" t-as="move">
-                                <td>
-                                    <span t-field="move.product_id"/>
-                                    <p t-if="move.product_id.hs_code">HS code: <span t-field="move.product_id.hs_code"/></p>
-                                </td>
-                                <td>
-                                    <span t-field="move.product_id.origin_id.code"/>
-                                </td>
-                                <td>
-                                    <span t-field="move.ordered_qty"/>
-                                    <span t-field="move.product_uom"/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
 
                     <t t-set="backorder" t-value="False"/>
-                    <table class="table table-condensed mt48"  t-if="o.pack_operation_ids">
-                        <!-- Is there a discount on at least one line? -->
-                        <t t-set="display_discount" t-value="any([operation.sale_line_ids.mapped('discount') for operation in o.pack_operation_ids])"/>
+                    <t t-set="sale" t-value="o.group_id.sale_ids"/>
 
+                    <table class="table table-condensed mt48"  t-if="o.group_id.sale_ids">
+
+                        <!-- Is there a discount on at least one line? -->
+                        <t t-set="display_discount" t-value="any([order_line.discount for order_line in sale.order_line])"/>
                         <t t-set="has_serial_number" t-value="o.pack_operation_ids.filtered('pack_lot_ids')" groups="stock.group_production_lot"/>
+
                         <thead>
                             <tr style="background: #ccc;">
                                 <th>
@@ -141,7 +120,7 @@
                                 <th class="text-center">
                                     <strong>Ordered Quantity</strong>
                                 </th>
-                                <th t-if="any([pack_operation.state == 'done' for pack_operation in o.pack_operation_ids])" class="text-right">
+                                <th class="text-right">
                                     <strong>Delivered Quantity</strong>
                                 </th>
                                 <th>
@@ -159,23 +138,23 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr t-foreach="o.pack_operation_ids" t-as="pack_operation">
+                            <tr t-if="any([order_line.id in pack_operation.sale_line_ids.ids or (order_line.product_id.type == 'service' and not o.backorder_id)
+                            for pack_operation in o.pack_operation_ids])" t-foreach="sale.order_line" t-as="order_line">
+                                <t t-set="pack_operation" t-value="o.pack_operation_ids.filtered(lambda p: order_line.id in p.sale_line_ids.ids)"/>
                                 <!-- Product -->
                                 <td>
-                                    <span t-field="pack_operation.product_id"/>
-                                    <p t-if="pack_operation.product_id.hs_code">HS code: <span t-field="pack_operation.product_id.hs_code"/></p>
+                                    <span t-field="order_line.product_id"/>
+                                    <p t-if="order_line.product_id.hs_code">HS code: <span t-field="order_line.product_id.hs_code"/></p>
                                     <t t-if="has_serial_number and pack_operation.pack_lot_ids">
                                         <table class="table table-condensed" t-if="pack_operation.pack_lot_ids">
                                             <th name="lot_serial"><span class="pull-left">Lot/Serial Number</span></th>
-                                            <tr t-foreach="pack_operation.pack_lot_ids" t-as="packlot">
+                                            <tr>
                                                 <td>
-                                                    <span t-field="packlot.lot_id"/>
-                                                    <t t-if="not packlot.lot_id">
-                                                        <span t-field="packlot.lot_name"/>
+                                                    <t t-foreach="o.move_lines" t-as="stock_move" t-if="stock_move.sale_line_id and stock_move.sale_line_id.id == order_line.id">
+                                                        <t t-foreach="stock_move.lot_ids" t-as="lot_id">
+                                                            <p t-field="lot_id.name"/>
+                                                        </t>
                                                     </t>
-                                                </td>
-                                                <td name="lot_qty">
-                                                    <span t-field="packlot.qty"/>
                                                 </td>
                                             </tr>
                                         </table>
@@ -183,68 +162,86 @@
                                 </td>
                                 <!-- Origin -->
                                 <td>
-                                    <span t-field="pack_operation.product_id.origin_id.code"/>
+                                    <span t-field="order_line.product_id.origin_id.code"/>
                                 </td>
                                 <!-- Ordered Quantity -->
                                 <td>
-                                    <table class="table table-condensed" t-if="pack_operation.linked_move_operation_ids">
-                                        <tr t-foreach="pack_operation.linked_move_operation_ids.mapped('move_id')" t-as="move_line">
+                                    <table class="table table-condensed">
+                                        <tr>
                                             <td class="text-right" style="border-top: none;">
-                                                <span t-field="move_line.ordered_qty"/>
+                                                <span t-esc="'{0:,.1f}'.format(order_line.product_uom_qty)"/>
+                                                <span t-field="order_line.product_uom"/>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
                                 <!-- Delivered Quantity -->
-                                <td t-if="pack_operation.state == 'done'">
+                                <td t-if="order_line.product_id.type != 'service'">
                                     <table class="table table-condensed">
                                         <tr>
                                             <td class="text-right" style="border-top: none;">
-                                                <t t-if="pack_operation.ordered_qty != pack_operation.qty_done">
-                                                    <t t-set="backorder" t-value="True"/>
-                                                </t>
-                                                <span t-field="pack_operation.qty_done"/>
-                                                <span t-field="pack_operation.product_uom_id"/>
+                                                <t t-set="delivered_qty" t-value="sum(stock_move.product_uom_qty
+                                                for stock_move in o.move_lines if stock_move.sale_line_id and stock_move.sale_line_id.id == order_line.id and stock_move.state in ('assigned', 'done'))"/>
+                                                <span t-esc="delivered_qty"/>
+                                                <span t-field="order_line.product_uom"/>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+
+                                <t t-if="delivered_qty != order_line.product_uom_qty and order_line.product_id.type != 'service'">
+                                    <t t-set="backorder" t-value="True"/>
+                                </t>
+
+                                <td t-if="order_line.product_id.type == 'service'">
+                                    <table class="table table-condensed">
+                                        <tr>
+                                            <td class="text-right" style="border-top: none;">
+                                                <span t-esc="'{0:,.1f}'.format(order_line.product_uom_qty)"/>
+                                                <span t-field="order_line.product_uom"/>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
                                 <!-- Price Unit -->
                                 <td>
-                                    <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
-                                        <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
+                                    <table class="table table-condensed">
+                                        <tr>
                                             <td class="text-right" style="border-top: none;">
-                                                <span t-field="sale_line.price_unit"/>
+                                                <span t-field="order_line.price_unit"/>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
                                 <!-- Discount -->
                                 <td t-if="display_discount">
-                                    <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
-                                        <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
+                                    <table class="table table-condensed">
+                                        <tr>
                                             <td class="text-right" style="border-top: none;">
-                                                <span t-field="sale_line.discount"/>
+                                                <span t-field="order_line.discount"/>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
                                 <!-- Taxes -->
                                 <td class="text-right">
-                                    <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
-                                        <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
+                                    <table class="table table-condensed">
+                                        <tr>
                                             <td class="text-right" style="border-top: none;">
-                                                <span t-esc="', '.join(map(lambda x: (x.description or x.name), sale_line.tax_id))"/>
+                                                <span t-esc="', '.join(map(lambda x: (x.description or x.name), order_line.tax_id))"/>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
-                                <!-- Ordered Qty Price -->
+                                <!-- Delivered Qty Price -->
                                 <td>
-                                    <table class="table table-condensed" t-if="pack_operation.sale_line_ids">
-                                        <tr t-foreach="pack_operation.sale_line_ids" t-as="sale_line">
-                                            <td class="text-right" style="border-top: none;">
-                                                <span t-field="sale_line.price_subtotal"/>
+                                    <table class="table table-condensed">
+                                        <tr>
+                                            <td t-if="order_line.product_id.type != 'service'" class="text-right" style="border-top: none;">
+                                                <span t-esc="'{0:,.2f}'.format(delivered_qty * order_line.price_subtotal / order_line.product_uom_qty)"/>
+                                            </td>
+                                            <td t-if="order_line.product_id.type == 'service'" class="text-right" style="border-top: none;">
+                                                <span t-esc="'{0:,.2f}'.format(order_line.product_uom_qty * order_line.price_subtotal)"/>
                                             </td>
                                         </tr>
                                     </table>
@@ -257,24 +254,31 @@
                         <div class="col-xs-4 pull-right">
                             <table class="table table-condensed">
                                 <tr class="border-black" >
+                                    <!-- Iterate in stock move and service lines to calculate the sum-->
                                     <td><strong>Total Without Taxes</strong></td>
                                     <td class="text-right">
-                                        <t t-set="price_subtotal" t-value="sum(sum(pack_operation.sale_line_ids.mapped('price_subtotal')) for pack_operation in o.pack_operation_ids)"/>
-                                        <span t-esc="price_subtotal" t-options="{'widget': 'monetary', 'display_currency': o.procurement_group_sale_id.pricelist_id.currency_id}"/>
+                                        <t t-set="price_subtotal_products" t-value="sum(stock_move.sale_line_id.price_subtotal * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
+                                        for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_subtotal for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <span t-esc="price_subtotal_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Taxes</td>
                                     <td class="text-right">
-                                        <t t-set="price_tax" t-value="sum(sum(pack_operation.sale_line_ids.mapped('price_tax')) for pack_operation in o.pack_operation_ids)"/>
-                                        <span t-esc="price_tax" t-options="{'widget': 'monetary', 'display_currency':o.procurement_group_sale_id.pricelist_id.currency_id}"/>
+                                        <t t-set="price_tax_products" t-value="sum(stock_move.sale_line_id.price_tax * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
+                                        for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_tax for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <span t-esc="price_tax_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
                                 <tr class="border-black" >
                                     <td><strong>Total</strong></td>
                                     <td class="text-right">
-                                        <t t-set="price_total" t-value="sum(sum(pack_operation.sale_line_ids.mapped('price_total')) for pack_operation in o.pack_operation_ids)"/>
-                                        <span t-esc="price_total" t-options="{'widget': 'monetary', 'display_currency': o.procurement_group_sale_id.pricelist_id.currency_id}"/>
+                                        <t t-set="price_total_products" t-value="sum(stock_move.sale_line_id.price_total * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
+                                        for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_total for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <span t-esc="price_total_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
                             </table>
@@ -288,6 +292,9 @@
                         <t t-if="backorder">
                             All items couldn't be shipped, the remaining ones will be shipped as soon as they become available.
                         </t>
+                    </p>
+                    <p>
+                      Final invoice will be issued after the delivery.
                     </p>
 
                     <div class="row" id="fta" name="fta">
