[BSSFL-483] RMA configure reception operation type
* RMA picking in configuration

* Move string to new line

* Remove variable picking_type_id

* Move attributes of related field

--- a/odoo/local-src/sf_rma/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma/views/rma_config_settings.xml
@@ -18,6 +18,9 @@
                         <field name="rma_default_payment_term_from_id" />
                         <field name="rma_default_payment_term_to_id" />
                     </group>
+                    <group name="Reception" string="Reception">
+                        <field name="rma_receive_picking_type_id"/>
+                    </group>
                 </div>
             </form>
         </field>
